# Device-Policy-Management-Backend

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
assignments/: models.py  services.py  urls.py  views.py
base/: celery.py  settings.py  urls.py
devices/: models.py  serializers.py  urls.py  views.py
jobs/: models.py  tasks.py
policies/: models.py  serializers.py  services.py  urls.py  views.py
